--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,18 @@
       </section>
     </main>
     <nav class="navigation">
-      <a class="navigation__link navigation__link--active" href="/">H</a>
-      <a class="navigation__link" href="/bookmarks.html">B</a>
-      <a class="navigation__link" href="/create.html">C</a>
-      <a class="navigation__link" href="/profile.html">P</a>
+      <a class="navigation__link navigation__link--active" href="/index.html"
+        ><img src="../img/home.svg" alt="Home"
+      /></a>
+      <a class="navigation__link" href="/bookmarks.html"
+        ><img src="../img/bookmark.svg" alt="Bookmark"
+      /></a>
+      <a class="navigation__link" href="/create.html"
+        ><img src="../img/plus.svg" alt="Add question"
+      /></a>
+      <a class="navigation__link" href="/profile.html"
+        ><img src="../img/profile.svg" alt="Profile"
+      /></a>
     </nav>
   </body>
 </html>
