Build and design cards

--- a/src/index.html
+++ b/src/index.html
@@ -10,35 +10,52 @@
     <header class="main-header">CSS Quiz</header>
     <main class="card__container">
       <section class="card">
+        <h2 class="card__header">Frage</h2>
+        <span class="card__bookmark"
+          ><img src="../img/bookmark.svg" alt="Bookmark"
+        /></span>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, facilis.
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate,
-          accusamus. Hallo.
+          Welches CSS Pseudo-Element fügt etwas vor einem Element ein?
         </p>
+        <button class="card__button">Antwort zeigen</button>
+        <ul class="card__taglist">
+          <li>.before</li>
+          <li>insert-before</li>
+          <li>::before</li>
+          <li>before:</li>
+        </ul>
       </section>
       <section class="card">
+        <h2 class="card__header">Frage</h2>
+        <span class="card__bookmark card__bookmark--active"
+          ><img src="../img/bookmark.svg" alt="Bookmark"
+        /></span>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+          Welches CSS Pseudo-Element fügt etwas vor einem Element ein?
         </p>
+        <button class="card__button">Antwort zeigen</button>
+        <ul class="card__taglist">
+          <li>.before</li>
+          <li>insert-before</li>
+          <li>::before</li>
+          <li>before:</li>
+        </ul>
       </section>
       <section class="card">
+        <h2 class="card__header">Frage</h2>
+        <span class="card__bookmark"
+          ><img src="../img/bookmark.svg" alt="Bookmark"
+        /></span>
         <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+          Welches CSS Pseudo-Element fügt etwas vor einem Element ein?
         </p>
-      </section>
-      <section class="card">
-        <p class="card__question">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
-          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
-        </p>
+        <button class="card__button">Antwort zeigen</button>
+        <ul class="card__taglist">
+          <li>.before</li>
+          <li>insert-before</li>
+          <li>::before</li>
+          <li>before:</li>
+        </ul>
       </section>
     </main>
     <nav class="navigation">
