Adjust image on profile site

--- a/src/profile.html
+++ b/src/profile.html
@@ -10,13 +10,13 @@
     <header class="main-header">Profile</header>
 
     <main class="profile__container">
-      <section class="profile__section">
-        <span class="profile__pic"
+      <section class="profile__img--box">
+        <span class="profile__img"
           ><img src="../img/profile.svg" alt="Profilbild"
         /></span>
         <span class="profile__name">Cleverster Spieler</span>
       </section>
-      <section class="profile__section">
+      <section>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
           recusandae blanditiis est ratione veniam porro ea totam maxime illum
@@ -24,7 +24,7 @@
           ullam voluptas eius!
         </p>
       </section>
-      <section class="profile__section">
+      <section>
         <h2 class="profile__header">Meine Skills</h2>
         <ul class="profile__taglist">
           <li>Skill 1</li>
@@ -36,7 +36,7 @@
           <li>Skill 7</li>
         </ul>
       </section>
-      <section class="profile__section"></section>
+      <section></section>
       <button class="profile__button">Ausloggen</button>
     </main>
 
