--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -46,15 +46,13 @@
       <a class="navigation__link" href="/index.html"
         ><img src="../img/home.svg" alt="Home"
       /></a>
-      <a
-        class="navigation__link navigation__link--active"
-        href="/bookmarks.html"
+      <a class="navigation__link navigation__link--active" href="bookmarks.html"
         ><img src="../img/bookmark.svg" alt="Bookmark"
       /></a>
-      <a class="navigation__link" href="/create.html"
+      <a class="navigation__link" href="create.html"
         ><img src="../img/plus.svg" alt="Add question"
       /></a>
-      <a class="navigation__link" href="/profile.html"
+      <a class="navigation__link" href="profile.html"
         ><img src="../img/profile.svg" alt="Profile"
       /></a>
     </nav>
